--- a/src/styles.css
+++ b/src/styles.css
@@ -10,17 +10,15 @@
   }
 
   
-html {
-    overflow-y: scroll;
-    overflow-x: hidden
-  }
+  html {
+    overflow-x: hidden; /* Restrict horizontal overflow */
+    overflow-y: scroll; /* Keep vertical scroll on html */
+}
 
-
-html, body { height: 100%; }
-body {  
-  font-family: "Cormorant Garamond", serif;
-  font-weight: 400;
-  font-style: normal;
-  
-
- }
+body {
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 400;
+    font-style: normal;
+    height: 100%;
+    overflow-x: hidden; /* Allow auto overflow in body */
+}
